# kafka-repo

./: .gitignore  Cargo.toml  Dockerfile  README.md  boolean_expr.pest  build_docker.sh  build_docker_osx.sh  build_image.sh  build_linux.sh  get_consumer.sh  post_search.sh  run.sh
src/: apis.rs  azure_ai_apis.rs  data_service.rs  data_state.rs  data_utils.rs  entities.rs  entities_ai.rs  export.rs  jwt_middleware.rs  main.rs  open_ai_search.rs
statics/: index.html  login.html  marked-config.js  mermaid-config.js  script.js  searchable-dropdown.js  table.js  token-handler.js
