[package]
name = "kafka-repo"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-musl-gcc"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-rate-limiter = "0.1"
actix-service = "2"
actix-cors = "0.7"
tokio = { version = "1", features = ["sync"] }


pretty_env_logger = "0.5"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

dotenv = "0.15"
csv = "1.3"
polars = { version = "0.41",features = ["lazy", "csv", "serde", "serde-lazy","strings","regex"] }
pest = { version = "2" }
pest_derive = { version = "2" }


#opentelemetry-application-insights = { version = "0.33", default-features = false, features = [
#    "logs",
#    "metrics",
#    "live-metrics",
#    "reqwest-client-rustls",
#] }
#opentelemetry = { version = "0.23", default-features = false, features = [
#    "logs_level_enabled",
#    "metrics",
#    "trace",
#    "logs",
#] }
#opentelemetry_sdk = { version = "0.23", features = [
#    "metrics",
#    "logs",
#    "trace",
#    "logs_level_enabled",
#    "rt-tokio",
#] }
#opentelemetry-appender-log = { version = "0.4", features = [
#    "logs_level_enabled",
#    "with-serde",
#] }
#opentelemetry-semantic-conventions = { version = "0.15" }
#opentelemetry-http = { version = "0.12", features = ["reqwest-rustls"] }
#actix-web-opentelemetry = { version = "0.18", features = ["metrics"] }

reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }

azure_identity = { version = "0.20" ,default-features = false, features = ["enable_reqwest_rustls"] }
azure_storage = { version = "0.20",default-features = false, features = ["enable_reqwest_rustls"] }
azure_storage_blobs = { version = "0.20",default-features = false, features = ["enable_reqwest_rustls"] }
azure_core = {version = "0.20",default-features = false,features = ["enable_reqwest_rustls"]}

futures = "0.3"
chrono = { version = "0.4" , features = ["serde"] }
jsonwebtoken = "9.3"
futures-util = "0.3"
derive_more = "0.99"

[profile.release]
opt-level = "s"  # Optimize for size with some performance improvements
lto = "thin"     # Thin LTO for further size and performance improvements
debug = false    # Disable debug information to reduce binary size
codegen-units = 1  # Single code generation unit for better optimization
panic = 'abort'  # Use abort for smaller binaries